# mcp-example

./: main.py  pyproject.toml
mcp-server-deepdive-deployment-teacher/: __init__.py  __main__.py
src/mcp-server-deepdive-deployment-teacher/: __init__.py
