[project]
name = "mcp-server-deepdive-deployment-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp_server_deepdive_deployment_teacher = "mcp_server_deepdive_deployment_teacher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}