[project]
name = "mcp-server-deepdive-deployment-teacher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-server = "mcp-server-deepdive-deployment-teacher.__main__:main"