[project]
name = "mcp-server-deepdive-deployment-teacher"
version = "0.1.0"
description = "MCP example server"
authors = [{ name = "Henry Habib", email = "you@example.com" }]
dependencies = [
    "mcp[cli]>=1.9.0",
]

[project.scripts]
mcp-server = "mcpserver.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
